--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -7,6 +7,9 @@ disabled = false
 
 [character]
 disabled = false
+success_symbol = "[❯](bold green)"
+error_symbol = "[❯](bold red)"
+
 
 [cmake]
 format = "| [$symbol]($style)"
