--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,35 +1,45 @@
 [aws]
-symbol = "  "
-format = '| [$symbol($profile )(\($region\) )(\[$duration\])]($style)'
+disabled = true
+
+[azure]
+disabled = true
 
 [battery]
 disabled = false
 
+[buf]
+disabled = true
+
+[c]
+disabled = true
+
 [character]
 disabled = false
-success_symbol = "[❯](bold green)"
-error_symbol = "[❯](bold red)"
-
+format = "$symbol[█](fg:black)"
 
 [cmake]
-format = "| [$symbol]($style)"
+disabled = true
+
+[cobol]
+disabled = true
 
 [cmd_duration]
 disabled = true
 
 [conda]
-symbol = " "
-format = "| [$symbol$environment]($style) "
+disabled = true
+
+[container]
+disabled = false
 
 [crystal]
-format = "| [$symbol]($style)"
+disabled = true
 
 [dart]
-symbol = " "
-format = "| [$symbol]($style)"
+disabled = true
 
 [deno]
-format = "| [$symbol]($style)"
+disabled = true
 
 [directory]
 read_only = "  "
@@ -39,21 +49,19 @@ symbol = " "
 format = "| [$symbol$context]($style) "
 
 [dotnet]
-format = "| [$symbol(🎯 $tfm )]($style)"
+disabled = true
 
 [elixir]
-symbol = " "
-format = '| [$symbol($version \(OTP $otp_version\) )]($style)'
+disabled = true
 
 [elm]
-symbol = " "
-format = "| [$symbol]($style)"
+disabled = true
 
 [erlang]
-format = "| [$symbol](style)"
+disabled = true
 
 [gcloud]
-format = '| [$symbol$account(@$domain)(\($region\))]($style) '
+disabled = true
 
 [git_branch]
 symbol = " "
@@ -66,25 +74,30 @@ format = "| [\\($hash\\)]($style) [\\($tag\\)]($style) "
 [git_state]
 format = '| \([$state( $progress_current/$progress_total)]($style)\) '
 
+[git_metrics]
+disabled = true
+
 [git_status]
-format = '([\[$all_status$ahead_behind\]]($style) )'
-ahead = "⇡${count}"
-diverged = "⇕⇡${ahead_count}⇣${behind_count}"
-behind = "⇣${count}"
-conflicted = "=${count}"
-untracked = "?${count}"
-stashed = "$${count}"
-modified = "!${count}"
-staged = "+${count}"
-renamed = "»${count}"
-deleted = "✘${count}"
+format = '([\[ $all_status$ahead_behind\]]($style) )'
+ahead = "⇡${count} "
+diverged = "⇕⇡${ahead_count}⇣${behind_count} "
+behind = "⇣${count} "
+conflicted = "=${count} "
+untracked = "?${count} "
+stashed = "$${count} "
+modified = "!${count} "
+staged = "+${count} "
+renamed = "»${count} "
+deleted = "✘${count} "
 
 [golang]
-symbol = " "
-format = "| [$symbol]($style)"
+disabled = true
+
+[haskell]
+disabled = true
 
 [helm]
-format = "| [$symbol]($style)"
+disabled = true
 
 [hostname]
 format = "| [$hostname]($style) in "
@@ -97,81 +110,78 @@ format = "| [${symbol}]($style)"
 format = "| [$symbol$number]($style) "
 
 [julia]
-symbol = " "
-format = "| [$symbol]($style)"
+disabled = true
 
 [kotlin]
-format = "| [$symbol)]($style)"
+disabled = true
 
 [kubernetes]
-format = '| [$symbol$context( \($namespace\))]($style) in '
+disabled = true
 
 [line_break]
 disabled = true
 
+[localip]
+disabled = true
+
 [lua]
-symbol = " "
-format = "| [$symbol]($style)"
+disabled = true
 
 [memory_usage]
 disabled = true
 
 [hg_branch]
 disabled = true
-symbol = " "
-format = "| [$symbol$branch]($style) "
 
 [nim]
-symbol = " "
-format = "| [$symbol]($style)"
+disabled = true
 
 [nix_shell]
-symbol = " "
-format = '| [$symbol$state( \($name\))]($style) '
+disabled = true
 
 [nodejs]
-symbol = " "
-format = "| [$symbol]($style)"
+disabled = true
 
 [ocaml]
-format = "| [$symbol($switch_indicator$switch_name )]($style)"
+disabled = true
 
 [openstack]
-format = "| [$symbol$cloud(\\($project\\))]($style) "
+disabled = true
 
 [package]
 symbol = " "
 format = "| [$symbol$version]($style) "
 
 [perl]
-symbol = " "
-format = "| [$symbol]($style)"
+disabled = true
 
 [php]
-symbol = " "
-format = "| [$symbol]($style)"
+disabled = true
+
+[pulumi]
+disabled = true
 
 [purescript]
-format = "| [$symbol]($style)"
+disabled = true
 
 [python]
-symbol = " "
-format = '| [${symbol}${pyenv_prefix} (\($virtualenv\) )]($style)'
+disabled = true
+
+[rlang]
+disabled = true
 
 [red]
-format = "| [$symbol]($style)"
+disabled = true
 
 [ruby]
-symbol = " "
-format = "| [$symbol]($style)"
+disabled = true
 
 [rust]
 symbol = " "
 format = "| [$symbol]($style)"
 
 [scala]
-symbol = " "
-format = "| [${symbol}]($style)"
+disabled = true
 
 [shell]
 disabled = true
@@ -180,17 +190,22 @@ disabled = true
 disabled = true
 
 [singularity]
-format = '| [$symbol\[$env\]]($style) '
+disabled = true
+
+[spack]
+disabled = true
 
 [status]
 disabled = true
 
+[sudo]
+disabled = true
+
 [swift]
-symbol = "ﯣ "
-format = "| [$symbol]($style)"
+disabled = true
 
 [terraform]
-format = "| [$symbol$workspace]($style) "
+disabled = true
 
 [time]
 disabled = true
@@ -199,27 +214,13 @@ disabled = true
 disabled = true
 
 [vagrant]
-format = "| [$symbol]($style)"
+disabled = true
 
 [vlang]
-format = "| [$symbol]($style)"
+disabled = true
 
 [vcsh]
 disabled = false
 
 [zig]
-format = "| [$symbol]($style)"
-
-[custom.giturl]
-description = "Display symbol for remote Git server"
-command = "sh ~/.config/starship/git_remote_symbol.sh"
-when = 'git rev-parse --is-inside-work-tree 2> /dev/null && sh ~/.config/starship/git_remote_symbol.sh | grep "|"'
-format = "$output  "
-shell = ["bash", "--noprofile", "--norc"]
-
-[custom.sudo]
-command = "echo '!'"
-description = "valid sudo timestamp marker"
-format = "| [$symbol$output ]($style)"
-style = "bold bright-red"
-when = "sudo -vn &>/dev/null"
+disabled = true
